demo/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: statgate-demo
  labels:
    istio-injection: enabled
